// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker should render month picker 1`] = `
<div>
  <table
    class="ui small center aligned table table-month"
  >
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="compact highlight "
          data-name="Jan"
        >
          Jan
        </td>
        <td
          class="compact highlight "
          data-name="Feb"
        >
          Feb
        </td>
        <td
          class="compact highlight "
          data-name="Mar"
        >
          Mar
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class="compact highlight selected"
          data-name="Apr"
        >
          Apr
        </td>
        <td
          class="compact highlight "
          data-name="May"
        >
          May
        </td>
        <td
          class="compact highlight "
          data-name="Jun"
        >
          Jun
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class="compact highlight "
          data-name="Jul"
        >
          Jul
        </td>
        <td
          class="compact highlight "
          data-name="Aug"
        >
          Aug
        </td>
        <td
          class="compact highlight "
          data-name="Sep"
        >
          Sep
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class="compact highlight "
          data-name="Oct"
        >
          Oct
        </td>
        <td
          class="compact highlight "
          data-name="Nov"
        >
          Nov
        </td>
        <td
          class="compact highlight "
          data-name="Dec"
        >
          Dec
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`Picker should render year picker 1`] = `
<div>
  <table
    class="ui small center aligned table table-month"
  >
    <tbody
      class=""
    >
      <tr
        class=""
      >
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
        <td
          class="compact highlight "
        >
          
        </td>
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
      </tr>
      <tr
        class=""
      >
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
        <td
          class="compact highlight "
          data-name="NaN"
        >
          
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
